<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">حدس عدد (شانسی)</string>
    <string name="title">حدس عدد</string>
    <string name="author_name">سعید جوان مرد</string>
    <string name="author_name_en">Saeed Javanmard</string>

    <string name="stage_fmt">مرحله: %d</string>
    <string name="range_fmt">بازه: ۱ تا %d</string>
    <string name="chances_fmt">شانس: %d</string>

    <string name="hint_input">حدس خود را وارد کنید…</string>
    <string name="btn_guess">ثبت حدس</string>
    <string name="btn_hint">راهنما (-۱ شانس)</string>
    <string name="btn_next">مرحله بعد</string>
    <string name="btn_restart">شروع مجدد</string>

    <string name="msg_start">برای شروع، یک عدد حدس بزن!</string>
    <string name="msg_too_high">پایین‌تر بیا 👇</string>
    <string name="msg_too_low">بالاتر برو 👆</string>
    <string name="msg_win">🎉 برنده شدی! عدد %d بود.</string>
    <string name="msg_lose">😕 باختی! عدد %d بود.</string>
    <string name="msg_no_chances">شانسی باقی نمانده!</string>
    <string name="msg_invalid_input">لطفاً یک عدد معتبر وارد کن.</string>
    <string name="msg_out_of_range">عدد باید بین ۱ و %d باشد.</string>
    <string name="msg_new_round">مرحله جدید شروع شد!</string>
    <string name="msg_wrong_guess">حدس اشتباه!</string>
    <string name="msg_no_hint_chance">شانس کافی برای راهنمایی نداری.</string>
    <string name="msg_hint_enter_number">اول یه عدد وارد کن تا راهنمایی بگیری.</string>
    <string name="msg_hint_lower">عدد از %d کوچکتره.</string>
    <string name="msg_hint_higher">عدد از %d بزرگتره.</string>



    <string name="action_settings">تنظیمات</string>
    <string name="first_fragment_label">صفحه اول</string>
    <string name="second_fragment_label">صفحه دوم</string>

</resources>
